--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://mronnes.github.io/build/css/_variables.css">
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages</p>
