--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://mronnes.github.io/build/css/_variables.css">
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages</p>
+<a href="mronnes.github.io/tokens.json">json</a>
 </body>
 </html>
