--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="https://mronnes.github.io/build/css/_variables.css">
+    <link rel="stylesheet" href="https://mronnes.github.io/style/variables.css">
     <link rel="stylesheet" href="style/style.css">
 <body>
 <h1>Hello World</h1>
